# CaelusIntegratedAgents

./: .gitignore  CaelusIntegratedAgents.spec  Dockerfile  README.md  awesome_loader.py  compile_check.py  debug_import.hex  debug_import.py  docker-compose.yml  expected_files.json  logging.yaml  mri.py  mri_config.yaml  pyproject.toml  pytest.ini  repo_integrity_checker.py  requirements.txt  sefirot.py  stdout  streamlit_app.py  test_import_utils.py  utils.py
.github/workflows/: audit_skeleton.yml  ci.yml  gui_release.yml
adeptus_docs/Church/: Church_Structure.md
adeptus_docs/constitution/: terran_constitution.md  us_constitution.md  us_constitution.txt
adeptus_docs/doctrine/: adeptus_foundations.md
agents/: __init__.py
agents/common/: __init__.py  retriable_openai.py
archagents/: __init__.py  registry.yaml
cookiecutter/: __init__.py  main.py
desktop_app/: __init__.py  app.py  app_state.py  application_state.py  logging_config.py  main.py
docker/: docker-compose.yaml
docx/: __init__.py
exporter/: __init__.py  agent.py
generator/: __init__.py  agent.py  agent_generator.py
openai/: __init__.py
research_extractor/: __init__.py  agent.py
scripts/: audit_repo.py  build_exe.ps1  register_vectors.py  star_of_caelus_pipeline.py
seraph_llm/: README.md  chain.py  ingestion.py  memory.py  prompt_router.py  requirements.txt  router_functions.py
squarespace_sync/: __init__.py  agent.py
tests/: test_agent_manager.py  test_logging_config.py  test_prompt_router.py  test_repo_integrity.py  test_sefirot.py  test_utils.py
yaml/: __init__.py
(+32 files in other folders)
