[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "caelus-integrated-agents"
version = "0.1.0"
dependencies = [
    "openai==1.86.0",
    "faiss-cpu==1.11.0",
    "langchain==0.3.25",
    "python-docx==1.1.2",
    "cookiecutter==2.6.0",
    "pdfplumber==0.11.7",
    "psycopg2-binary==2.9.10",
    "pyyaml==6.0.2",
    "apscheduler==3.11.0",
    "python-slugify==8.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
]

[tool.setuptools]
packages = []
